# openworkers-cli

./: .cargo-binstall.toml  Cargo.toml  Dockerfile.multi  README.md
.github/workflows/: docker.yml  release.yml
migrations/: 00_init.sql  01_add_scheduled_events_cascade.sql  02_auto_timestamps_and_uuids.sql  03_databases.sql  04_add_databases_resource_limit.sql  05_add_token_id.sql  06_endpoints_and_projects.sql  07_binding_types.sql  08_resource_limits_columns.sql  09_add_database_binding_type.sql  09_database_configs.sql  10_database_configs.sql  10_provider_enums.sql  11_provider_enums.sql  11_worker_bindings.sql  12_add_worker_binding_type.sql  13_worker_bindings.sql  14_kv_jsonb_value.sql  14_password_auth.sql  15_api_keys.sql  15_postgate_compat.sql  16_password_auth.sql  16_worker_deployments.sql  17_api_keys.sql  19_environment_unique_name.sql  20_tenant_helper_functions.sql  21_endpoints_view.sql  22_add_priority_to_resolution.sql  22_add_priority_to_resolution.sql.diff  23_html_fallback_routing.sql  23_html_fallback_routing.sql.diff  24_wildcard_pattern_matching.sql  24_wildcard_pattern_matching.sql.diff  25_deploy_project.sql  26_link_worker_environment.sql  27_normalize_platform_db_uuid.sql  28_planetscale_provider.sql
src/: config.rs  main.rs  s3.rs
src/backend/: api.rs  db.rs  mock.rs  mod.rs
src/commands/: alias.rs  databases.rs  db.rs  env.rs  kv.rs  latency.rs  login.rs  mcp.rs  migrate.rs  mod.rs  projects.rs  storage.rs  users.rs  workers.rs
