[package]
name = "openworkers-cli"
version = "0.2.4"
edition = "2024"
license = "MIT"
description = "CLI for OpenWorkers - Self-hosted Cloudflare Workers runtime"
repository = "https://github.com/openworkers/openworkers-cli"
homepage = "https://github.com/openworkers/openworkers"
readme = "README.md"
keywords = ["workers", "serverless", "edge", "runtime", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["OpenWorkers Team"]

[[bin]]
name = "ow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-print = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
colored = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
sha2 = "0.10"
hex = "0.4"
zip = "4"
hmac = "0.12"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
